--- a/index.html
+++ b/index.html
@@ -1,25 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nav project</title>
+    <title>css project 6</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="media/logo.png">
-    
+
 </head>
+
 <body>
-    <div class="main">
-        <div class="nav">
-            <nav>
-                <ul>
-                    <li class="list1"><img src="media/logo.png" alt="logo" class="li-logo"></li>
-                    <li class="list2 hover"><a href="#">Home</a></li>
-                    <li class="list3 hover"><a href="#">Region</a></li>
-                    <li class="list4 hover"><a href="#">About</a></li>
-                </ul>
-            </nav>
+    <!-- <div class="main"> -->
+    <div class="nav">
+        <nav>
+            <ul>
+                <li class="list1"><img src="media/logo.png" alt="logo" class="li-logo"></li>
+                <li class="list2 hover"><a href="#">Home</a></li>
+                <li class="list3 hover"><a href="#">Region</a></li>
+                <li class="list4 hover"><a href="#">About</a></li>
+            </ul>
+        </nav>
+    </div>
+    <!-- </div> -->
+    <div class="cont">
+        <div class="lorem">
+            <div class="content">
+                <h2>SAHARA</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum nostrum, a sunt vero ducimus
+                    suscipit
+                    porro,
+                    eius doloremque consequatur facere aperiam sequi quibusdam? Labore facilis adipisci magnam illum sit
+                    saepe?
+                </p>
+                <button class="button">Explore</button>
+            </div>
+        </div>
+        <div class="grid">
+            <div class="div1">
+                <img src="media/img_1.jpg" alt="img_1">
+            </div>
+            <div class="div2">
+                <img src="media/img_2.jpg" alt="img_2">
+            </div>
+            <div class="div3">
+                <img src="media/img_3.jpg" alt="img_3">
+            </div>
+            <div class="div4">
+                <img src="media/img_4.jpg" alt="img_4">
+            </div>
         </div>
     </div>
 </body>
+
 </html>
